2007-05-29  Matthieu Nottale  <nottale@gostai.com>

	Add the 'runningcommands' keyword, fix a bug in tag mechanism.
	* parser/bison/utoken.l: Add the runningcommands keyword.
	* ucommand.cc: Implement runningcommands.
	              Add missing unsetTag call in optimised implementations of setTag.

2007-05-28  Matthieu Nottale  <nottale@gostai.com>

	Optimisation: replace sprintfs with strcpy.
	* src/uobj.cc: Use UString::makeName where possible.
	* src/ustring.hh: Add two static inline functions to form a "a.b" name from two UString/char* optimising the implementation.
	* src/uvariablename.cc: Use UString::makeName where possible.

2007-05-25  Matthieu Nottale  <nottale@gostai.com>

	Fix critical bug in previous patch, optimize more.
	* ueventhandler.cc: use the char* in unForgedName to insert 
	                    into emit2tab in UEventHandler ctor.
	* ueventhandler.hh: Remove unused emit2 attribute.
	* uobj.cc: use eventSymbolDefined in searchEvent intead of iterating.
	* uobj.hh: Change prototype of searchEvent to return a bool, 
	           nobody uses the return value except for !0 check.

2007-05-25  Matthieu Nottale  <nottale@gostai.com>

	Optimize kernel::eventSymbolDefined
	* ueventhandler.cc: kernel::eventSymbolDefined now performs a find on urbiserver::emit2tab. An entry in this hash is added if not present in  UEventHandler ctor.
	                    Additionaly, the entry in emit2tab is a counter on the number of active events with this name
	* ueventhandler.hh: .
	* userver.hh,
	* utypes.hh: Defines a new hash_map type and an instance in userver: emit2tab.

2007-05-23  Matthieu Nottale  <nottale@gostai.com>

	Fix leak in foreach command.
	* src/ucommand.cc,
	* src/ucommand.hh: Add a 'list' field containing the result of the evaluation of 'expression', delete it in dtor.

2007-05-10  Matthieu Nottale  <nottale@gostai.com>

	Fix bug: adaptive modifier alone did not trigger notifyaccess callbacks