@@ -258,8 +258,8 @@ take (T* t)
   TOK_COPY         "copy"
   TOK_DEF          "def"
   TOK_DELGROUP     "delgroup"
-  TOK_DERIV        "derivation"
-  TOK_DERIV2       "second-derivation"
+  TOK_DERIV        "'"
+  TOK_DERIV2       "''"
   TOK_DIR          "->"
   TOK_DISINHERITS  "disinherits"
   TOK_DIV          "/"
@@ -317,8 +317,8 @@ take (T* t)
   TOK_TILDE        "~"
   TOK_TIMEOUT      "timeout"
   TOK_TRUECONST    "true"
-  TOK_TRUEDERIV    "command-derivation"
-  TOK_TRUEDERIV2   "second-command-derivation"
+  TOK_TRUEDERIV    "'d"
+  TOK_TRUEDERIV2   "''d"
   TOK_ECHO         "echo"
   TOK_UNALIAS      "unalias"
   TOK_UNBLOCK      "unblock"
